feat: add resource

--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 	<body>
 		<div id="app"></div>
 		<script type="module" src="/src/main.ts"></script>
+		<script>
+			window.serverPort = 7080
+			// window.serverHost = 'http://127.0.0.1'
+		</script>
 	</body>
 </html>
